[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ScreenBackgroundTextTemp.jpg" type="Texture" id=1]
[ext_resource path="res://src/endingscreen.gd" type="Script" id=2]
[ext_resource path="res://src/SongMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/TitleScreen.tscn" type="PackedScene" id=4]

[node name="Ending Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -266, -78 )
script = ExtResource( 2 )

[node name="TitleScreen" parent="." instance=ExtResource( 4 )]

[node name="SongMenu" parent="." instance=ExtResource( 3 )]

[node name="MenuInterface" type="NinePatchRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -201.0
margin_bottom = 201.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MenuInterface"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -292.0
margin_top = -146.0
margin_right = 289.0
margin_bottom = -110.0

[node name="Complete" type="Label" parent="MenuInterface/VBoxContainer"]
margin_right = 581.0
margin_bottom = 14.0
text = "Stage Complete!"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MenuInterface/VBoxContainer"]
margin_top = 18.0
margin_right = 581.0
margin_bottom = 32.0
alignment = 1

[node name="ScoreLabel" type="Label" parent="MenuInterface/VBoxContainer/HBoxContainer"]
margin_left = 265.0
margin_right = 304.0
margin_bottom = 14.0
text = "Score:"
align = 1
valign = 1

[node name="ScoreValue" type="Label" parent="MenuInterface/VBoxContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 316.0
margin_bottom = 14.0
text = "0"

[node name="VBoxContainer2" type="VBoxContainer" parent="MenuInterface/VBoxContainer"]
margin_top = 36.0
margin_right = 581.0
margin_bottom = 104.0
alignment = 1

[node name="Selection" type="Button" parent="MenuInterface/VBoxContainer/VBoxContainer2"]
margin_right = 581.0
margin_bottom = 20.0
text = "Back to Song Selection"

[node name="Replay" type="Button" parent="MenuInterface/VBoxContainer/VBoxContainer2"]
margin_top = 24.0
margin_right = 581.0
margin_bottom = 44.0
text = "Replay"

[node name="MainMenu" type="Button" parent="MenuInterface/VBoxContainer/VBoxContainer2"]
margin_top = 48.0
margin_right = 581.0
margin_bottom = 68.0
text = "To Main Menu"

[connection signal="pressed" from="MenuInterface/VBoxContainer/VBoxContainer2/Selection" to="." method="_on_Selection_pressed"]
[connection signal="pressed" from="MenuInterface/VBoxContainer/VBoxContainer2/Replay" to="." method="_on_Replay_pressed"]
[connection signal="pressed" from="MenuInterface/VBoxContainer/VBoxContainer2/MainMenu" to="." method="_on_MainMenu_pressed"]
